--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,3 +124,11 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* hook para habilitar cursor pointer en todos los botones, que por defecto viene deshabilitado para tailwind 4 */
+@layer base {
+  button:not(:disabled),
+  [role='button']:not(:disabled) {
+    cursor: pointer;
+  }
+}
