--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -125,7 +125,7 @@
   }
 }
 
-/* hook para habilitar cursor pointer en todos los botones, que por defecto viene deshabilitado para tailwind 4 */
+/* Hook to enable cursor pointer on all buttons, which is disabled by default in Tailwind 4 */
 @layer base {
   button:not(:disabled),
   [role='button']:not(:disabled) {
